fixing spacing on form headings

--- a/web/php_project/css/styles.css
+++ b/web/php_project/css/styles.css
@@ -274,6 +274,7 @@ a:active {
 
 .user-form-heading {
     color: black;
+    margin: 10px 0;
 }
 
 .user-form {
